<resources>
    <string name="app_name">BasicUI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="optionSearch">Search</string>
    <string name="optionProfile">Profile</string>
    <string name="optionSettings">Settings</string>
    <string name="optionLogin">Log In</string>
    <string name="optionLogout">Logout</string>

    <string name="please_select_a_layout">Please select a Widget</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="basic_user_interface">Basic User Interface</string>
    <string name="names">Birir, Sarah, MareWill</string>
    <string name="title_activity_linear_layout">LinearLayout</string>
    <string name="title_activity_relative_layout">RelativeLayout</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="mobile_computing_marks">Mobile Computing Marks</string>
    <string name="mareka_high">Mareka High</string>
    <string name="report">Report</string>
    <string name="form">Form</string>
    <string name="sarah_kerubo">Sarah Kerubo</string>
    <string name="_5_4_30">5.4 / 30</string>
    <string name="beatrice_birir">Beatrice Birir</string>
    <string name="_5_30">5 / 30</string>
    <string name="_30_30">30 / 30</string>
    <string name="willy_mareka">Willy Mareka</string>
    <string name="name">Name</string>
    <string name="cat_1">Cat 1</string>
    <string name="title_activity_text_widget">TextWidget</string>
    <string name="title_activity_switch_widget">SwitchWidget</string>
    <string name="title_activity_bar_widgets">BarWidgets</string>
    <string name="title_activity_button_widgets">ButtonWidgets</string>
    <string name="text_widget">Text Widget</string>
    <string name="switch_widget">Switch Widget</string>
    <string name="button_widget">Button Widget</string>
    <string name="bar_widget">Bar Widget</string>
    <string name="word_1">Word 1</string>
    <string name="word_2">Word 2</string>
    <string name="word_3">Word 3</string>
    <string name="word_4">Word 4</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="plain">Plain</string>
    <string name="text_type">Text Type</string>
    <string name="different_text_formats">Different Text Formats</string>
    <string name="dp_size">dp Size</string>
    <string name="sp_size">sp Size</string>
    <string name="px_size">px Size</string>
    <string name="next_point">Next Point</string>
    <string name="back">Back</string>
    <string name="point">Point</string>
    <string name="types_of_buttons">Types of Buttons</string>
    <string name="units_barely_passed_check_box">Units Barely Passed (Check Box)</string>
    <string name="best_eating_place_radio_button">Best Eating Place (Radio Button)</string>
    <string name="data_structures">Data Structures</string>
    <string name="computational_models">Computational Models</string>
    <string name="advanced_c">Advanced C++</string>
    <string name="non_selected">Non Selected</string>
    <string name="selected">Selected :</string>
    <string name="strathmore_cafeteria">Strathmore Cafeteria</string>
    <string name="siwaka">Siwaka</string>
    <string name="snack_bar">Snack Bar</string>
    <string name="turned_on">Turned On</string>
    <string name="switchtext">Switch</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="turned">Turned</string>
    <string name="on_off">ON/OFF</string>
    <string name="manunited_fan">ManUnited Fan</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="main_menu">Main Menu</string>
    <string name="vibrator_off">Vibrator Off</string>
    <string name="download">Download</string>
    <string name="seek_bar_data">Seek Bar Data</string>
    <string name="home">Home</string>
    <string name="_0714135480">0714135480</string>
    <string name="janemajanje94_gmail_com">janemajanje94@gmail.com</string>
    <string name="female">FeMale</string>
    <string name="_22">22</string>
    <string name="majanja">Majanja</string>
    <string name="jane">Jane</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender</string>
    <string name="email">Email:</string>
    <string name="phone_no">Phone No.</string>
</resources>
