<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/optionSearch"
        app:showAsAction="always" />
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/optionLogin"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/optionProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/optionSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/optionLogout"
        app:showAsAction="never" />
</menu>
